# splan-api

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  sonar-project.properties  user_api_test.sh
.github/workflows/: clang-format-check.yml  cmake-single-platform.yml  sonarcloud.yml
api-test/: api-results.xml  integrationPostmanTests.json
docs/: README.md  arc42-template-EN.md  splan-api
docs/splan-api-trafic/: splan.th-rosenheim.de_Archive [24-03-25 12-58-51].har
src/: .clang-format  CMakeLists.txt  Doxyfile.in  main.c  sha256_string.c
src/db/: redis_db.c
src/include/: sha256_string.h
src/include/db/: redis_db.h
src/include/rest/: default_route.h
src/include/splan/: spdata.h
src/include/splan/curl/: curl_dl.h
src/include/splan/json/: spapi.h
src/rest/: default_route.c
src/splan/: data_free.c  iso_to_utf.c  spdata.h  splan_init.c
src/splan/curl/: curl_dl.c
src/splan/json/: getlocs.c  iso_to_utf.c  lectures_parse.c  locs_parse.c  ogs_parse.c  pgsext_parse.c  pus_parse.c  spapi.h
src/splan/request/: getlocs.c  getogs.c  getpgsext.c  getpus.c
tests/: CMakeLists.txt  curl_dl.cpp  curl_getlocs_raw.txt  curl_getogs_raw.txt  curl_getpgsext_raw.txt  curl_getpus_raw.txt  data_free.cpp  getlocks.cpp  getogs.cpp  getpgsext.cpp  getpus.cpp  iso8859_test.txt  iso8859_to_utf_test.cpp  lectures_parse.cpp  locs_parse.cpp  ogs_parse.cpp  pgsext_parse.cpp  pus_parse.cpp  redis_init.cpp  redis_store_lookup.cpp  rest_default_route.cpp  splan_init.cpp  utf_8_test.txt
tests/splan/: splan_init.cpp
